[package]
name = "track24"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aes = { version = "0.8.4", default-features = false }
base64 = { version = "0.22.1", default-features = false }
cbc = { version = "0.1.2", default-features = false }
cipher = { version = "0.4.4", default-features = false, features = [
    "block-padding",
    "std",
] }
md-5 = { version = "0.10.6", default-features = false }
reqwest = { version = "0.13.2", features = [
    "json",
    "query",
    "rustls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", default-features = false }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros"] }
